# TCompiler

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  abs2rel.bat  angle2quote.bat  launch.vs.json  pack.bat  publish.bat  qoute2angle.bat  quote2angle.bat  rel2abs.bat  todo.txt
include/: Startup.h
tomic/: CMakeLists.txt
tomic/include/: Startup.h  tomic.h
tomic/include/tomic/: Common.h  Compiler.h  Config.h  Defines.h  Shared.h  ToMiCompiler.h
tomic/include/tomic/ir/: LlvmGenerator.h
tomic/include/tomic/ir/llvm/: DerivedType.h  DerivedTypes.h  LlvmContext.h  Type.h
tomic/include/tomic/lexer/: DefaultPreprocessor.h  ILexialAnalyser.h  ILexicalAnalyser.h  ILexicalAnalyzer.h  ILexicalParser.h  IPreprocessor.h
tomic/include/tomic/lexer/impl/: DefaultLexicalAnalyser.h  DefaultLexicalAnalyzer.h  DefaultLexicalParser.h  DefaultPreprocessor.h  HeaderPreprocessor.h
tomic/include/tomic/lexer/token/: DefaultTokenMapper.h  ITokenMapper.h  Token.h  TokenMapper.h
tomic/include/tomic/llvm/: Llvm.h
tomic/include/tomic/llvm/asm/: IAsmGenerator.h  IAsmPrinter.h  IAsmWriter.h
tomic/include/tomic/logger/: IErrorLogger.h  ILogger.h
tomic/include/tomic/parser/: ISemanticAnalyzer.h  ISemanticParser.h  ISyntacticParser.h
tomic/include/tomic/utils/: Config.h  SemanticUtil.h  StringUtil.h  SymbolTableUtil.h
tomic/src/: Config.cpp  Main.cpp  Startup.cpp  ToMiCompiler.cpp
tomic/src/lexer/: DefaultLexicalAnalyser.cpp  DefaultLexicalParser.cpp  DefaultPreprocessor.cpp  HeaderPreprocessor.cpp
tomic/src/lexer/token/: DefaultTokenMapper.cpp
tomic/src/llvm/asm/: StandardAsmGenerator.cpp  StandardAsmGeneratorAux.cpp  StandardAsmPrinter.cpp  StandardAsmWriter.cpp  TypePrinter.cpp  ValuePrinter.cpp  VerboseAsmPrinter.cpp  VerboseAsmWriter.cpp
tomic/src/llvm/ir/: DerivedTypes.cpp  Initializer.cpp  LlvmContext.cpp  Module.cpp  SlotTracker.cpp  Type.cpp  Value.cpp
tomic/src/logger/: DefaultLogger.cpp  DumbLogger.cpp  ILogger.cpp  StandardErrorLogger.cpp
tomic/src/logger/debug/: DefaultLogger.cpp  DumbLogger.cpp  ILogger.cpp
tomic/src/logger/error/: DefaultErrorLogger.cpp  DefaultErrorMapper.cpp  StandardErrorLogger.cpp  StandardErrorMapper.cpp  VerboseErrorLogger.cpp  VerboseErrorMapper.cpp
tomic/src/parser/: DefaultSemanticAnalyzer.cpp  DefaultSemanticAnalyzerActionMapper.cpp  DefaultSemanticParser.cpp  DefaultSyntacticParser.cpp  ResilientSyntacticParser.cpp
tomic/src/parser/ast/: SyntacticNode.cpp  SyntacticTree.cpp  SyntacticType.cpp  SyntaxNode.cpp  SyntaxTree.cpp
tomic/src/parser/table/: SymbolTable.cpp  SymbolTableBlock.cpp
tomic/src/utils/: SemanticUtil.cpp  StringUtil.cpp  SymbolTableUtil.cpp
twio/: CMakeLists.txt
twio/include/: twio.h
twio/include/twio/: Common.h  Macros.h
twio/include/twio/core/: AdvancedReader.h  IReader.h  IWriter.h  Reader.h  ReaderBuffer.h  Writer.h
twio/include/twio/stream/: BufferInputStream.h  BufferOutputStream.h  FileInputStream.h  FileOutputStream.h  IStream.h
twio/include/twio/utils/: FileUtil.h  Printer.h  Unwrapper.h
twio/src/core/: AdvancedReader.cpp  Reader.cpp  ReaderBuffer.cpp  Writer.cpp
twio/src/stream/: BufferInputStream.cpp  BufferOutputStream.cpp  FileInputStream.cpp  FileOutputStream.cpp
twio/src/utils/: FileUtil.cpp  Printer.cpp  Unwrapper.cpp
(+188 files in other folders)
